Fix issue with back button routing getting stuck due to initial list filters adding to history. Fix issue where 'my' deliveries are always loaded due to incorrect method call.

--- a/client/projects/hybrid/src/app/notification/child-components/notification/notification.component.scss
+++ b/client/projects/hybrid/src/app/notification/child-components/notification/notification.component.scss
@@ -43,6 +43,14 @@
 }
 
 :host-context(body.dark) {
+  .notification-container {
+    --background: var(--ion-color-step-50);
+
+    &.unread {
+      --background: var(--ion-color-step-150);
+    }
+  }
+
   .notification .title {
     color: var(--ion-color-primary);
   }
